--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -47,11 +47,11 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FWJPTEHEB5"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6HXE38BMP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FWJPTEHEB5');
+  gtag('config', 'G-L6HXE38BMP');
 </script>
